--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 	<!-- jquery cdn -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<!-- favicon -->
-    <link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
+    	<link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ4T5HF5B6"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-KJ4T5HF5B6');
+	</script>
 </head>
 <body>
 	<!-- NAVBAR -->
