--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	<!-- favicon -->
     	<link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ4T5HF5B6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2SD5CZ8Q75"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-KJ4T5HF5B6');
+  gtag('config', 'G-2SD5CZ8Q75');
 </script>
 </head>
 <body>
