--- a/available-games.html
+++ b/available-games.html
@@ -15,6 +15,15 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <!-- favicon -->
     <link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-189814487-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-189814487-1');
+</script>
 </head>
 <body>
   <!-- NAVBAR -->
