--- a/condemned-section.html
+++ b/condemned-section.html
@@ -17,6 +17,15 @@
     <link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
     <!-- login-to-buy modal script -->
     <script defer src="script.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-189814487-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-189814487-1');
+</script>
 </head>
 <body>
     <!-- NAVBAR -->
