--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 			<li><a href="index.html">HOME</a></li>
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="available-games.html">GAMES</a></li>
+			<!--
 			<li><a href="#">NEWS</a></li>
 			<li><a href="#">FORUM</a></li>
+			-->
 		  </ul>
 		</nav>
 		<ul class="nav__links">
-		  <li><a href="#">LOGIN</a></li>
+		  <li><a href="#"></a></li>
 		</ul>
 	  </header>
 	  
