--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
 	<!-- favicon -->
     	<link rel="shortcut icon" type="image/png" href="images/rg-favicon-white.png">
+	<meta name="google-site-verification" content="Ob4civGIcgdVtnvmQBOITpSJ0fViAUxikJIkX9CZAuE" />
 </head>
 <body>
 	<!-- NAVBAR -->
